tests/NormalTests/paczka2/big_fuzzy/31338825.err
Error in line 3: IAHXx0vVj A160 47,8
Error in line 7: OVUkyeQb S561 56,4
Error in line 4: IAHXx0vVj A246 30,2
Error in line 1: A452 S561 46,3
Error in line 12: R9u1qMe S561 56,1
Error in line 15: OVFUkyeQb A452 59,8
Error in line 21: t6q0RWTF A452 49,0
Error in line 25: t6q0RWTF S561 97,2
Error in line 34: IAHXx0vVj A160 920,9
Error in line 38: OVFUkyeQb A246 38,4
Error in line 43: OVFUkyeQb A246 40,54
Error in line 39: OVFUkyeQb A452 18,0
Error in line 45: OVFUkyeQb A246 134,5
Error in line 50: IAHXx0vVj A246 12,1
Error in line 62: t6q0RWTF S561 2,26
Error in line 61: t6q0RWTF S561 0,6
Error in line 68: OVFUkyeQb A1m0 70,9
Error in line 47: Q4iLFRHWb A452 16,8
Error in line 63: A452 A246 97,0
Error in line 96: R9u1qMe A246 50,8
Error in line 99: A452 S561 93,6
Error in line 100: A452 A246 29,5
Error in line 97: Q4iLFRHWb S561 82,4
Error in line 101: A452 S561 68,6
Error in line 108: Q4iLFRHWb A452 31,7
Error in line 109: 8cJbkCm6 A452 91,6
Error in line 131: 8cJbkCm6 S561 89,1
Error in line 132: t6q0RWTF A452 28,2
Error in line 134: 8cJbkCm6 A246 9,7
Error in line 142: Q4iLFRHWb A160 76,3
Error in line 145: 8cJbkCm6 S561 35,8
Error in line 149: t6q0RWTF A452 40,6
Error in line 167: A452 A246 19,7
Error in line 180: IAHXx0vVj A160 16,7
Error in line 190: IAHXx0vVj A246 68,9
Error in line 189: t6q0RWTF A452 28,6
Error in line 168: OVFUkyeQb A246 222,3
Error in line 209: R9u1qMe S561 42,0
Error in line 208: 8cJbkCm6 A452 49,5
Error in line 192: IAHXx0vVj S561 54,2
Error in line 220: IAHXx0vVj A246 58,4
Error in line 225: t6q0RWTF S561 29,1
Error in line 227: A452 S561 2,9
Error in line 222: R9u1qMe A160 12,1
Error in line 238: R9u1qMe A452 45,7
Error in line 240: A452 A452 69,3
